--- a/customer-email-assistant/.env
+++ b/customer-email-assistant/.env
@@ -1,6 +1,6 @@
 # Gmail API Configuration
-GMAIL_CLIENT_ID=your_gmail_client_id
-GMAIL_CLIENT_SECRET=your_gmail_client_secret
+GMAIL_CLIENT_ID=ghgh2753@gmail.com
+GMAIL_CLIENT_SECRET=itnjrzrdgmngzjyd
 GMAIL_REFRESH_TOKEN=your_gmail_refresh_token
 
 # OpenAI API (for reply generation)
