--- a/customer-email-assistant/.env
+++ b/customer-email-assistant/.env
@@ -4,10 +4,10 @@ GMAIL_CLIENT_SECRET=itnjrzrdgmngzjyd
 GMAIL_REFRESH_TOKEN=your_gmail_refresh_token
 
 # OpenAI API (for reply generation)
-OPENAI_API_KEY=your_openai_api_key
+OPENAI_API_KEY=AIzaSyB0bOE7YGBjU2juB-g4Na-yD7JsS13VTXo
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/email_assistant
+MONGODB_URI=mongodb+srv://ghgh2753:dydy1011!@@hohyeonkim.zwkkdyu.mongodb.net/?retryWrites=true&w=majority&appName=HOHYEONKIM
 # or Firebase
 FIREBASE_PROJECT_ID=your_firebase_project_id
 FIREBASE_PRIVATE_KEY=your_firebase_private_key
