--- a/customer-email-assistant/server/requirements.txt
+++ b/customer-email-assistant/server/requirements.txt
@@ -6,6 +6,7 @@ google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 google-generativeai==0.3.2
+openai==0.28.1
 pymongo==4.6.0
 motor==3.3.2
 pydantic==2.5.0
